@@ -636,6 +636,7 @@ module StdLabels      = StdLabels
 module String         = String
 module StringLabels   = StringLabels
 module Sys            = Sys
+module Type           = Type
 module Uchar          = Uchar
 module Unit           = Unit
 module Weak           = Weak
