@@ -103,9 +103,9 @@ include struct open struct type t = T end let x = T end
 Line 1, characters 15-41:
 1 | include struct open struct type t = T end let x = T end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: The type t/338 introduced by this open appears in the signature
+Error: The type t/339 introduced by this open appears in the signature
        Line 1, characters 46-47:
-         The value x has no valid type if t/338 is hidden
+         The value x has no valid type if t/339 is hidden
 |}];;
 
 module A = struct
@@ -123,9 +123,9 @@ Lines 3-6, characters 4-7:
 4 |       type t = T
 5 |       let x = T
 6 |     end
-Error: The type t/343 introduced by this open appears in the signature
+Error: The type t/344 introduced by this open appears in the signature
        Line 7, characters 8-9:
-         The value y has no valid type if t/343 is hidden
+         The value y has no valid type if t/344 is hidden
 |}];;
 
 module A = struct
@@ -142,9 +142,9 @@ Lines 3-5, characters 4-7:
 3 | ....open struct
 4 |       type t = T
 5 |     end
-Error: The type t/348 introduced by this open appears in the signature
+Error: The type t/349 introduced by this open appears in the signature
        Line 6, characters 8-9:
-         The value y has no valid type if t/348 is hidden
+         The value y has no valid type if t/349 is hidden
 |}]
 
 (* It was decided to not allow this anymore. *)
