@@ -17,7 +17,7 @@ module type S = sig type t val x : t end
 module Falias (X : S) = X
 [%%expect{|
 {
- "Falias"[module] -> Abs<.4>(X/280, X/280<.3>);
+ "Falias"[module] -> Abs<.4>(X/281, X/281<.3>);
  }
 module Falias : functor (X : S) -> sig type t = X.t val x : t end
 |}]
@@ -29,10 +29,10 @@ end
 {
  "Finclude"[module] ->
    Abs<.6>
-      (X/284,
+      (X/285,
        {
-        "t"[type] -> X/284<.5> . "t"[type];
-        "x"[value] -> X/284<.5> . "x"[value];
+        "t"[type] -> X/285<.5> . "t"[type];
+        "x"[value] -> X/285<.5> . "x"[value];
         });
  }
 module Finclude : functor (X : S) -> sig type t = X.t val x : t end
@@ -45,7 +45,7 @@ end
 [%%expect{|
 {
  "Fredef"[module] ->
-   Abs<.10>(X/291, {
+   Abs<.10>(X/292, {
                     "t"[type] -> <.8>;
                     "x"[value] -> <.9>;
                     });
@@ -223,8 +223,8 @@ module Big_to_small1 : B2S = functor (X : Big) -> X
 [%%expect{|
 {
  "Big_to_small1"[module] ->
-   Abs<.40>(X/386, {<.39>
-                    "t"[type] -> X/386<.39> . "t"[type];
+   Abs<.40>(X/387, {<.39>
+                    "t"[type] -> X/387<.39> . "t"[type];
                     });
  }
 module Big_to_small1 : B2S
@@ -234,8 +234,8 @@ module Big_to_small2 : B2S = functor (X : Big) -> struct include X end
 [%%expect{|
 {
  "Big_to_small2"[module] ->
-   Abs<.42>(X/389, {
-                    "t"[type] -> X/389<.41> . "t"[type];
+   Abs<.42>(X/390, {
+                    "t"[type] -> X/390<.41> . "t"[type];
                     });
  }
 module Big_to_small2 : B2S
