@@ -24,11 +24,11 @@ end
 Line 3, characters 2-36:
 3 |   include Comparable with type t = t
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: Illegal shadowing of included type t/285 by t/290
+Error: Illegal shadowing of included type t/286 by t/291
        Line 2, characters 2-19:
-         Type t/285 came from this include
+         Type t/286 came from this include
        Line 3, characters 2-23:
-         The value print has no valid type if t/285 is shadowed
+         The value print has no valid type if t/286 is shadowed
 |}]
 
 module type Sunderscore = sig
